After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630252 - It is not possible to read long plugin descriptions in gedit
It is not possible to read long plugin descriptions in gedit
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: libpeas-gtk
git master
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2010-09-21 12:21 UTC by burger.gregor
Modified: 2011-12-08 16:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot showing the problem (48.37 KB, image/png)
2010-09-21 12:40 UTC, burger.gregor
  Details
Screenshot of about in window (39.56 KB, image/png)
2011-08-28 22:16 UTC, Garrett Regier
  Details
Show tooltip for available plugins (1.83 KB, patch)
2011-12-08 12:15 UTC, Garrett Regier
committed Details | Review

Description burger.gregor 2010-09-21 12:21:32 UTC
The plugin tab in the preference dialog of gedit is to small and doesn't
allow to read long descriptions of plugins. I can't resize the dialog
nor scroll horizontally. A simple tool-tip displaying the whole text
is also not available.
Comment 1 burger.gregor 2010-09-21 12:40:45 UTC
Created attachment 170755 [details]
screenshot showing the problem
Comment 2 Ignacio Casal Quinteiro (nacho) 2010-09-21 12:54:08 UTC
You can press in the about dialog so you can see all the info about the plugin.
Comment 3 burger.gregor 2010-09-21 13:11:15 UTC
Yes that is true. But I can't see a reason for providing this information
on the dialog that can make absolute no sense in some situations (e.g. where
the text gets longer). 

- whats against a tool-tip showing the whole description 
- or making the dialog resizable.
Comment 4 Steve Frécinaux 2011-03-10 18:15:38 UTC
To be fair I think this is a gedit bug: if you were able to resize the plugin manager in gedit you would be able to see longer descriptions...
Comment 5 Ignacio Casal Quinteiro (nacho) 2011-03-10 18:23:22 UTC
I agree about not resizing the dialog but still this is a problem in the manager, 'cause I think our current widget is broken for some cases and probably we should check with the design team for a better approach for this.
Comment 6 Garrett Regier 2011-08-28 22:16:42 UTC
Created attachment 195010 [details]
Screenshot of about in window

I have a implementation of the plugin manager that removes the About button and instead shows all of the information to the right of the list.

See the attached screenshot for an example.
Comment 7 Garrett Regier 2011-12-08 12:15:20 UTC
Created attachment 203063 [details] [review]
Show tooltip for available plugins

Shows tooltip for available plugins
Comment 8 Steve Frécinaux 2011-12-08 12:49:52 UTC
Review of attachment 203063 [details] [review]:

Looks just fine.
Comment 9 Garrett Regier 2011-12-08 16:24:21 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.