Show tooltip for available plugins

http://bugzilla.gnome.org/show_bug.cgi?id=630252